# image-viewer

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  env.example  image_list.txt.example  pyproject.toml  requirements.txt  start.sh  test_app.py  test_pagination.html
.github/workflows/: main.yml
k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml  service-account.yaml  service.yaml
static/css/: style.css
static/js/: app.js
templates/: index.html  login.html
