[tool.poetry]
name = "image-viewer"
version = "0.1.0"
description = "Image viewer application for OCI Object Storage"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Pillow = "^10.0.0"
requests = "^2.31.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
oci = "^2.112.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
